--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@
 #  https://www.archlinux.org/pacman/pacman.8.html
 
 os: Visual Studio 2019
-version: 0.16.16.4
+version: 0.16.16.5
 image:
   - Visual Studio 2019
 
@@ -25,8 +25,9 @@ install:
   - set PATH=C:\msys64\usr\bin;C:\msys64\usr\lib;%PATH%
   - bash -lc "pacman -S --noconfirm mingw-w64-x86_64-gtk3"
 
-  - choco feature enable -n allowEmptyChecksums
-  - choco install rakudostar
+#  - choco feature enable -n allowEmptyChecksums
+#  - choco install rakudostar
+  - rakudobrew build zef
   - refreshenv
 
   - git clone https://github.com/ugexe/zef.git
