--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@
 #  https://www.archlinux.org/pacman/pacman.8.html
 
 os: Visual Studio 2019
-version: 0.16.16.7
+version: 0.16.16.8
 image:
   - Visual Studio 2019
 
@@ -22,6 +22,7 @@ environment:
 
 install:
   # set path to use MSYS2 tools like pacman
+  - '"C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64'
   - set PATH=C:\msys64\usr\bin;C:\msys64\usr\lib;%PATH%
   - bash -lc "pacman -S --noconfirm mingw-w64-x86_64-gtk3"
 
@@ -29,10 +30,10 @@ install:
 #  - choco install rakudostar
   - choco install strawberryperl --allow-empty-checksums
   - set PATH=C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin;%PATH%
+
   - git clone https://github.com/tadzik/rakudobrew %USERPROFILE%\rakudobrew
   - set PATH=%USERPROFILE%\rakudobrew\bin;%PATH%
   - rakudobrew build moar
-  - refreshenv
   - rakudobrew build zef
   - refreshenv
 
