--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@
 #  https://www.archlinux.org/pacman/pacman.8.html
 
 os: Visual Studio 2019
-version: 0.16.16.8
+version: 0.16.16.9
 image:
   - Visual Studio 2019
 
@@ -21,14 +21,17 @@ environment:
   raku_test_all: 1
 
 install:
+  -'"C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvars64.bat"'
+
   # set path to use MSYS2 tools like pacman
-  - '"C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64'
   - set PATH=C:\msys64\usr\bin;C:\msys64\usr\lib;%PATH%
   - bash -lc "pacman -S --noconfirm mingw-w64-x86_64-gtk3"
 
-  - choco feature enable -n allowEmptyChecksums
+  - appveyor-retry choco install strawberryperl --allow-empty-checksums
+
+#  - choco feature enable -n allowEmptyChecksums
 #  - choco install rakudostar
-  - choco install strawberryperl --allow-empty-checksums
+#  - choco install strawberryperl --allow-empty-checksums
   - set PATH=C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin;%PATH%
 
   - git clone https://github.com/tadzik/rakudobrew %USERPROFILE%\rakudobrew
