--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@
 #  https://www.archlinux.org/pacman/pacman.8.html
 
 os: Visual Studio 2019
-version: 0.16.16.10
+version: 0.16.16.11
 image:
   - Visual Studio 2019
 
@@ -21,23 +21,22 @@ environment:
   raku_test_all: 1
 
 install:
-  - '"C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvars64.bat"'
+#  - '"C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvars64.bat"'
 
   # set path to use MSYS2 tools like pacman
   - set PATH=C:\msys64\usr\bin;C:\msys64\usr\lib;%PATH%
   - bash -lc "pacman -S --noconfirm mingw-w64-x86_64-gtk3"
 
-  - appveyor-retry choco install strawberryperl --allow-empty-checksums
-
 #  - choco feature enable -n allowEmptyChecksums
 #  - choco install rakudostar
 #  - choco install strawberryperl --allow-empty-checksums
-  - set PATH=C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin;%PATH%
 
-  - git clone https://github.com/tadzik/rakudobrew %USERPROFILE%\rakudobrew
-  - set PATH=%USERPROFILE%\rakudobrew\bin;%PATH%
-  - rakudobrew build moar
-  - rakudobrew build zef
+  - bash -lc "curl https://rakubrew.org/install-on-perl.sh | sh"
+
+#  - git clone https://github.com/tadzik/rakudobrew %USERPROFILE%\rakudobrew
+#  - set PATH=%USERPROFILE%\rakudobrew\bin;%PATH%
+#  - rakudobrew build moar
+#  - rakudobrew build zef
   - refreshenv
 
 #  - git clone https://github.com/ugexe/zef.git
