--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@
 #  https://www.archlinux.org/pacman/pacman.8.html
 
 os: Visual Studio 2019
-version: 0.16.16.11
+version: 0.16.16.12
 image:
   - Visual Studio 2019
 
@@ -39,9 +39,9 @@ install:
 #  - rakudobrew build zef
   - refreshenv
 
-#  - git clone https://github.com/ugexe/zef.git
-#  - cd zef
-#  - raku -I. bin/zef install .
+  - git clone https://github.com/ugexe/zef.git
+  - cd zef
+  - raku -I. bin/zef install .
 
   - cd %APPVEYOR_BUILD_FOLDER%
   - zef --/test --deps-only install .
