--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@
 #  https://www.archlinux.org/pacman/pacman.8.html
 
 os: Visual Studio 2019
-version: 0.16.16.12
+version: 0.16.16.13
 image:
   - Visual Studio 2019
 
@@ -36,12 +36,15 @@ install:
 #  - git clone https://github.com/tadzik/rakudobrew %USERPROFILE%\rakudobrew
 #  - set PATH=%USERPROFILE%\rakudobrew\bin;%PATH%
 #  - rakudobrew build moar
-#  - rakudobrew build zef
+  - rakubrew build moar-blead
+  - rakubrew build-zef
+  - rakubrew list-available
+  - rakubrew rakubrew-version
   - refreshenv
 
-  - git clone https://github.com/ugexe/zef.git
-  - cd zef
-  - raku -I. bin/zef install .
+#  - git clone https://github.com/ugexe/zef.git
+#  - cd zef
+#  - raku -I. bin/zef install .
 
   - cd %APPVEYOR_BUILD_FOLDER%
   - zef --/test --deps-only install .
