--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@
 #  https://www.archlinux.org/pacman/pacman.8.html
 
 os: Visual Studio 2019
-version: 0.16.16.20
+version: 0.16.16.21
 image:
   - Visual Studio 2019
 
@@ -29,7 +29,7 @@ install:
 
 #  - choco feature enable -n allowEmptyChecksums
 #  - choco install rakudostar
-  - choco install strawberryperl --allow-empty-checksums
+#  - choco install strawberryperl --allow-empty-checksums
   - set PATH=C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin;%PATH%
 
 #  - bash -lc "curl https://rakubrew.org/install-on-perl.sh | sh"
