--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@
 #  https://www.archlinux.org/pacman/pacman.8.html
 
 os: Visual Studio 2019
-version: 0.16.16.21
+version: 0.16.16.22
 image:
   - Visual Studio 2019
 
@@ -23,10 +23,6 @@ environment:
 install:
 #  - '"C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvars64.bat"'
 
-  # set path to use MSYS2 tools like pacman
-  - set PATH=C:\msys64\usr\bin;C:\msys64\usr\lib;%PATH%
-  - bash -lc "pacman -S --noconfirm mingw-w64-x86_64-gtk3"
-
 #  - choco feature enable -n allowEmptyChecksums
 #  - choco install rakudostar
 #  - choco install strawberryperl --allow-empty-checksums
@@ -43,13 +39,20 @@ install:
 #  - rakubrew rakubrew-version
 #  - refreshenv
 
+  # install raku from git
   - git clone https://github.com/rakudo/rakudo.git
+  - cd rakudo
   - perl Configure.pl --gen-moar --gen-nqp --backends=moar
   - cd ..
 
+  # install zef from git
   - git clone https://github.com/ugexe/zef.git
   - cd zef
   - raku -I. bin/zef install .
+
+  # set path to use MSYS2 tools like pacman
+  - set PATH=C:\msys64\usr\bin;C:\msys64\usr\lib;%PATH%
+  - bash -lc "pacman -S --noconfirm mingw-w64-x86_64-gtk3"
 
 build: off
 
