--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@
 #  https://www.archlinux.org/pacman/pacman.8.html
 
 os: Visual Studio 2019
-version: 0.16.16.22
+version: 0.16.16.23
 image:
   - Visual Studio 2019
 
@@ -43,6 +43,7 @@ install:
   - git clone https://github.com/rakudo/rakudo.git
   - cd rakudo
   - perl Configure.pl --gen-moar --gen-nqp --backends=moar
+  - gmake install
   - cd ..
 
   # install zef from git
