--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@
 #  https://www.archlinux.org/pacman/pacman.8.html
 
 os: Visual Studio 2019
-version: 0.16.16.26
+version: 0.16.16.27
 image:
   - Visual Studio 2019
 
@@ -52,7 +52,7 @@ install:
   - cd C:\
   - git clone https://github.com/ugexe/zef.git
   - cd zef
-  - raku -I. bin/zef install .
+  - perl6 -I. bin/zef install .
   - refreshenv
 
   # set path to use MSYS2 tools like pacman
