--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@
 #  https://www.archlinux.org/pacman/pacman.8.html
 
 os: Visual Studio 2019
-version: 0.16.16.28
+version: 0.16.16.29
 image:
   - Visual Studio 2019
 
@@ -45,8 +45,7 @@ install:
   - cd rakudo
   - perl Configure.pl --gen-moar --gen-nqp --backends=moar
   - gmake install
-  - cmd: dir C:\rakudo\
-  - cmd: dir C:\rakudo\install\bin
+#  - cmd: dir C:\rakudo\
   - set PATH=C:\rakudo\install\bin;C:\rakudo\install\share\perl6\site\bin;%PATH%
   - SET PATH=C:\rakudo\bin;C:\rakudo\share\perl6\site\bin;%PATH%
   - refreshenv
@@ -55,8 +54,9 @@ install:
   - cd C:\
   - git clone https://github.com/ugexe/zef.git
   - cd zef
-  - raku -I. bin/zef install .
+  - rakudo.exe -I. bin/zef install .
   - refreshenv
+  - cmd: dir C:\rakudo\install\share\perl6\site\bin
 
   # set path to use MSYS2 tools like pacman
   - cd C:\
