--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@
 #  https://www.archlinux.org/pacman/pacman.8.html
 
 os: Visual Studio 2019
-version: 0.16.16.29
+version: 0.16.16.30
 image:
   - Visual Studio 2019
 
@@ -21,23 +21,7 @@ environment:
   raku_test_all: 1
 
 install:
-#  - '"C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvars64.bat"'
-
-#  - choco feature enable -n allowEmptyChecksums
-#  - choco install rakudostar
-#  - choco install strawberryperl --allow-empty-checksums
   - set PATH=C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin;%PATH%
-
-#  - bash -lc "curl https://rakubrew.org/install-on-perl.sh | sh"
-#  - set PATH=C:\home\appveyor\.rakubrew\bin\rakubrew
-
-#  - git clone https://github.com/tadzik/rakudobrew %USERPROFILE%\rakudobrew
-#  - set PATH=%USERPROFILE%\rakudobrew\bin;%PATH%
-#  - rakubrew download
-#  - rakubrew build-zef
-#  - rakubrew list-available
-#  - rakubrew rakubrew-version
-#  - refreshenv
 
   # install raku from git
   - cd C:\
@@ -45,17 +29,15 @@ install:
   - cd rakudo
   - perl Configure.pl --gen-moar --gen-nqp --backends=moar
   - gmake install
-#  - cmd: dir C:\rakudo\
   - set PATH=C:\rakudo\install\bin;C:\rakudo\install\share\perl6\site\bin;%PATH%
-  - SET PATH=C:\rakudo\bin;C:\rakudo\share\perl6\site\bin;%PATH%
-  - refreshenv
+  - cmd: dir C:\rakudo\install\bin
 
   # install zef from git
   - cd C:\
   - git clone https://github.com/ugexe/zef.git
   - cd zef
-  - rakudo.exe -I. bin/zef install .
-  - refreshenv
+  - cmd: rakudo.exe -I. bin/zef install .
+#  - refreshenv
   - cmd: dir C:\rakudo\install\share\perl6\site\bin
 
   # set path to use MSYS2 tools like pacman
@@ -72,8 +54,8 @@ test_script:
   - set PATH=C:\rakudo\install\bin;C:\rakudo\install\share\perl6\site\bin;C:\msys64\mingw64\bin;%PATH%
 
   - cd %APPVEYOR_BUILD_FOLDER%
-  - zef --/test --deps-only install .
-  - zef --verbose install .
+  - cmd: zef --/test --deps-only install .
+  - cmd: zef --verbose install .
 #  - cd %APPVEYOR_BUILD_FOLDER%\..
 
 # fetch repository as zip archive
